--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerSesionActivity"></activity>
+        <activity android:name=".ContactoActivity"></activity>
+        <activity android:name=".ConfirmaFotografoActivity" />
+        <activity android:name=".PerfilFotografoActivity" />
+        <activity android:name=".FotografosEncontradosActivity" />
+        <activity android:name=".BuscarFotografoActivity" />
+        <activity android:name=".VerSesionActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".MainCustomerActivity">
             <intent-filter>
